ignore files that throw an exception

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/IPES",
-            "args": ["-d", "testdata"],
+            "args": ["-d", "testdata/waedenswil"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
